# rooster

./: .dockerignore  .drone.yml  .editorconfig  .gitignore  .travis.yml  AUDIT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.debian  Dockerfile.fedora  Dockerfile.ubuntu1604  Dockerfile.ubuntu1804  README.md  build.rs  default.nix  install  install.sh  integration-tests.sh  shell.nix  tests-build.sh  tests-integration.sh
.cargo/: config
.github/workflows/: docker.yml  rooster-rust-tests.yml  tests.yml
integration-tests/: corrupted.rooster  test-command-add.sh  test-command-change.sh  test-command-export.sh  test-command-generate.sh  test-command-get.sh  test-command-import.sh  test-command-rename.sh  test-command-set-master-password.sh  test-command-transfer.sh  test-command-uninstall.sh  test-password-retry-nok.sh  test-password-retry-ok.sh  test-setup.sh
patch-xcb/: .cargo-checksum.json  .gitignore  Cargo.toml
src/: aes.rs  analytics.rs  clip.rs  clipboard.rs  color.rs  ffi.rs  generate.rs  io.rs  lib.rs  list.rs  macros.rs  main-rooster-clipboard.rs  main-rooster.rs  main.rs  password.rs  quale.rs  rclio.rs  rprompt.rs  rutil.rs  safe_string.rs  safe_vec.rs  shell_escape.rs
src/commands/: add.rs  change.rs  change_master.rs  change_master_password.rs  del.rs  delete.rs  export.rs  gen.rs  generate.rs  get.rs  import.rs  init.rs  list.rs  mod.rs  regenerate.rs  rename.rs  search.rs  set_master_password.rs  set_scrypt_params.rs  strength.rs  transfer.rs  uninstall.rs  weak.rs
src/password/: mod.rs  v1.rs  v2.rs
src/rclio/: all.rs  io.rs  lib.rs  rutil.rs
src/rclio/rutil/: lib.rs
src/rprompt/: all.rs
tests/: helpers.rs  test-command-add.sh  test-command-change.sh  test-command-delete.sh  test-command-export.sh  test-command-generate.sh  test-command-get.sh  test-command-list.sh  test-command-regenerate.sh  test-command-rename.sh  test-command-set-master-password.sh  test-command-transfer.sh  test-command-weak.sh  test-commands-add.rs  test-commands-change.rs  test-commands-delete.rs  test-commands-export.rs  test-commands-generate.rs  test-commands-get.rs  test-commands-import.rs  test-commands-list.rs  test-commands-regenerate.rs  test-commands-rename.rs  test-commands-set-master-password.rs  test-commands-set-scrypt-params.rs  test-commands-transfer.rs  test-corruption.rs  test-corruption.sh  test-password-retry-nok.sh  test-password-retry-ok.sh  test-password-retry.rs  test-setup-dropbox-no.sh  test-setup-dropbox-yes.sh  test-setup-no-file.sh  test-setup.sh
