[package]
name = "rooster"
version = "2.12.0"
authors = ["Conrad Kleinespel <conradk@conradk.com>"]
license = "Apache-2.0"
repository = "https://github.com/conradkleinespel/rooster"
homepage = "https://github.com/conradkleinespel/rooster"
keywords = ["password", "security"]
description = "A simple password manager"
readme = "README.md"
edition = "2018"

[features]
serde = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
libc = "0.2"
byteorder = "1.4"
clipboard = "0.5"
dirs = "5.0"
aes = "0.8"
cbc = {  version = "0.1", features = ["std"] }
scrypt = {  version = "0.11", default-features = false }
hmac = "0.12"
sha2 = "0.10"
ansi_term = "0.12"
clap = "4.0"
csv = "1.1"
tempfile = "3.2"
rclio = { path = "../rclio", version = "0.0" }
rtoolbox = { path = "../rtoolbox", features = ["serde"], version = "0.0" }
