[package]
name = "rooster"
version = "2.13.0"
authors = ["Conrad Kleinespel <conradk@conradk.com>"]
license = "Apache-2.0"
repository = "https://github.com/conradkleinespel/rooster"
homepage = "https://github.com/conradkleinespel/rooster"
keywords = ["password", "security"]
description = "A simple password manager"
readme = "README.md"
edition = "2018"

[features]
serde = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.9", features = ["thread_rng"] }
libc = "0.2"
byteorder = "1.5"
clipboard = "0.5"
dirs = "6.0"
aes = "0.8"
cbc = {  version = "0.1", features = ["std"] }
scrypt = {  version = "0.11", default-features = false }
hmac = "0.12"
sha2 = "0.10"
clap = "4.5"
csv = "1.3"
tempfile = "3.19"
rclio = { path = "../rclio", version = "0.0" }
rtoolbox = { path = "../rtoolbox", features = ["serde"], version = "0.0" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_WindowsProgramming"] }
